# cppy

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  pyproject.toml  releasenotes.rst  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
cppy/: __init__.py
cppy/include/cppy/: cppy.h  defines.h  errors.h  ptr.h
docs/: requirements.txt
docs/source/: conf.py  errors.rst  index.rst  installation.rst  pointer.rst
tests/: test_getting_include_dir.py
