# --------------------------------------------------------------------------------------
# Copyright (c) 2014-2025, Nucleic Development Team.
#
# Distributed under the terms of the Modified BSD License.
#
# The full license is in the file LICENSE, distributed with this software.
# --------------------------------------------------------------------------------------

[project]
name = "cppy"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "The Nucleic Development Team", email = "sccolbert@gmail.com"}
]
maintainers = [
  {name = "Matthieu C. Dartiailh", email = "m.dartiailh@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic=["version"]
dependencies = ["setuptools>=61.2"]


[project.urls]
homepage = "https://github.com/nucleic/cppy"
documentation = "https://cppy.readthedocs.io/en/latest/"
repository = "https://github.com/nucleic/cppy"
changelog = "https://github.com/nucleic/cppy/blob/main/releasenotes.rst"


[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cppy"]
package-data = {cppy = ["include/cppy/*.h"]}

[tool.setuptools_scm]
write_to = "cppy/version.py"
write_to_template = """
# -----------------------------------------------------------------------------
# Copyright (c) 2014-2025, Nucleic Development Team.
#
# Distributed under the terms of the Modified BSD License.
#
# The full license is in the file LICENSE, distributed with this software.
# -----------------------------------------------------------------------------
# This file is auto-generated by setuptools-scm do NOT edit it.

from collections import namedtuple

#: A namedtuple of the version info for the current release.
_version_info = namedtuple("_version_info", "major minor micro status")

parts = "{version}".split(".", 3)
__version_info__ = _version_info(
    int(parts[0]),
    int(parts[1]),
    int(parts[2]),
    parts[3] if len(parts) == 4 else "",
)

# Remove everything but the 'version_info' from this module.
del namedtuple, _version_info, parts

__version__ = "{version}"
"""
